--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,16 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'jp.ac.uryukyu.ie.e215739.App'
+    mainClass = 'Main'
 }
 
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes  "Main-Class": "Main"
+    }
 }
